support-frontend/assets/pages/contributions-landing/newTemplate.scss
@import '~stylesheets/gu-sass/gu-sass';

.gu-content--new-template {
  overflow: initial;

  /* ContributionFormContainer - contains form and blurb */
  .gu-content__content {
    margin: 0;
    padding: 0;
    overflow: initial;
  }
  /* */

  /* Text on right hand side of landing page */
  .gu-content__blurb {
    // Magic number alert: copied from 'standard template' calculated width
    max-width: 388px;

    @include mq($from: tablet) {
      border: 0; // removes top border from text
      margin-left: 0;
      padding-top: $gu-v-spacing * 5;
      padding-left: $gu-h-spacing * 1.75;
      /* sticky positioning */
      top: 0;
      position: sticky;
      align-self: flex-start;
      height: auto;
      /* */
    }

    @include mq($from: desktop) {
      padding-left: $gu-h-spacing * 2.5;
    }

    @include mq($from: leftCol) {
      padding-left: $gu-h-spacing * 4.5;
    }
  }

  .gu-content__blurb-blurb {
    border: 0; // removes bottom border from text
  }
  /* */

  .gu-content__form {
    border: 0;
    padding-top: ($gu-v-spacing * 2);

    @include mq($from: tablet) {
      max-width: $gu-h-spacing * 19.25;
      padding: ($gu-v-spacing * 1.5) ($gu-h-spacing * 1.25) 0;
    }

    @include mq($from: desktop) {
      max-width: $gu-h-spacing * 21;
    }

    @include mq($from: leftCol) {
      max-width: $gu-h-spacing * 32;
      padding: ($gu-v-spacing * 1.5) ($gu-h-spacing * 4.25) 0;
    }
  }
}

// Modified header for new template
.gu-content--new-template .gu-content__header {
  @include mq($from: leftCol) {
    padding: 0 85px; // Magic number alert: align the currency selector with the form
  }
}

// Modified footer for new template
.gu-content--new-template .component-footer {
  .component-left-margin-section::before {
    max-width: 75px; // Magic number alert: align the footer with the form
  }
}

